--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
+version: '3'
 server:
-  restart: always
   image: nginx
+  restart: always
   volumes:
     - ./server/conf.d:/etc/nginx/conf.d
     - ./app/static:/app/static
