--- a/server/conf.d/app.conf
+++ b/server/conf.d/app.conf
@@ -1,7 +1,9 @@
 server {
-    listen 80;
+    listen 443 ssl;
     charset utf-8;
     access_log off;
+    ssl_certificate /root/ssl/official/gveyes_net.crt;
+    ssl_certificate_key /root/ssl/official/gveyes.net.private_key;
 
     location /index {
         proxy_pass http://web:5000/index;
