--- a/server/conf.d/app.conf
+++ b/server/conf.d/app.conf
@@ -3,8 +3,6 @@ server {
     listen 443 ssl;
     charset utf-8;
     access_log off;
-    ssl_certificate /root/ssl/official/gveyes_net.crt;
-    ssl_certificate_key /root/ssl/official/gveyes.net.private_key;
 
     location /index {
         proxy_pass http://web:5000/index;
@@ -12,6 +10,7 @@ server {
         proxy_set_header X-Forwarded-Host $server_name;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        root /var/www/certbot;
     }
 
     location /static {
