--- a/server/conf.d/app.conf
+++ b/server/conf.d/app.conf
@@ -1,9 +1,10 @@
 server {
-    listen 80;
     listen 443 ssl;
     charset utf-8;
     access_log off;
-
+    server_name lifesabeachvietnam.com;
+    ssl_certificate /etc/letsencrypt/live/lifesabeachvietnam.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/lifesabeachvietnam.com/privkey.pem;
     location /index {
         proxy_pass http://web:5000/index;
         proxy_set_header Host $host:$server_port;
