--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,30 @@
-server:
-  image: nginx
-  restart: always
-  ports:
-    - 80:80
-    - 443:443
-  volumes:
-    - ./nginx/conf/:/etc/nginx/conf.d/:ro
-    - ./certbot/www/:/var/www/certbot/:ro
-  links:
-    - web:web
-certbot:
-  image: certbot/certbot:latest
-  volumes:
-    - ./certbot/www/:/var/www/certbot/:rw
-    - ./certbot/conf/:/etc/letsencrypt/:rw
-web:
-  extends:
-    file: docker-compose.base.yml
-    service: web
-  expose:
-    - "5000"
-  command: gunicorn app:app -b :5000 --name app --log-level=debug --log-file=-
+version: '3'
+
+services:
+  server:
+    image: nginx
+    restart: always
+    ports:
+      - 80:80
+      - 443:443
+    volumes:
+      - ./nginx/conf/:/etc/nginx/conf.d/:ro
+      - ./certbot/www/:/var/www/certbot/:ro
+      - ./certbot/conf/:/etc/letsencrypt/:rw
+    links:
+      - web:web
+
+  certbot:
+    image: certbot/certbot:latest
+    volumes:
+      - ./certbot/www/:/var/www/certbot/:rw
+      - ./certbot/conf/:/etc/letsencrypt/:rw
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
+
+  web:
+    extends:
+      file: docker-compose.base.yml
+      service: web
+    expose:
+      - "5000"
+    command: gunicorn app:app -b :5000 --name app --log-level=debug --log-file=-
