--- a/docker-compose.base.yml
+++ b/docker-compose.base.yml
@@ -1,6 +1,8 @@
-web:
-  restart: always
-  build: ./app
-  working_dir: /app
-  volumes:
-    - ./app:/app
+version: '3'
+services:
+  web:
+    restart: always
+    build: ./app
+    working_dir: /app
+    volumes:
+      - ./app:/app
